Fix spacing issues from markbot

--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,14 @@ html {
   box-sizing: inherit;
 }
 
-body: {
-  margin 0;
+body {
+  margin: 0;
 }
 
 img {
   width: 100%;
 }
+
 header {
   display: flex;
   justify-content: space-between;
@@ -29,7 +30,7 @@ header img {
   margin-right: .5rem;
 }
 
-h1 {
+header h1 {
   margin: 0;
 }
 
